--- a/public_html/index.html
+++ b/public_html/index.html
@@ -6,7 +6,7 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>Adrian's snake </title>
+        <title>Adrian's Anaconda</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel='stylesheet' type='text/css' href="css/style.csss" >
