--- a/public_html/index.html
+++ b/public_html/index.html
@@ -7,6 +7,14 @@
         <link rel="stylesheet" type="text/css" href="css/style.css" >
     </head>
     <body>
+        <section id="gameOver">
+            <h1 class="Title">GAME OVER!</h1>
+            <h3 id="restartButton">Restart?</h3>
+        </section>
+        <section id="startGame">
+            <hi class="Title">START GAME</hi>
+            <h3 id="startButton">Snake Game</h3>
+        </section>
         <canvas id="game-screen"></canvas>
         
         <script src="js/snake.js"></script>
